# DiffRL

./: .env  .gitignore  .gitmodules  README.md  pyproject.toml  uv_container.def
jax_cache_dir/: jit_step_fn-8630b516ae2d3afd558005db6f58a79ded4a1503b57efc5046febba6ec7ad8f0-cache
outputs/2025-07-07/16-17-57/.hydra/: hydra.yaml
outputs/2025-07-07/16-17-57/jax_cache_dir/: jit_convert_element_type-8009e4b6ffeb90a8c49cf34d563df49977e45c2f3e0d62df1ced57407d72e13b-cache  jit_convert_element_type-b8d6d8582ee14b7c0a1a0f1039d85f25d49a7563065f25617df2cd77a03f3ec6-cache
outputs/2025-07-07/16-17-57/wandb/: latest-run
outputs/2025-07-07/16-18-51/.hydra/: hydra.yaml  overrides.yaml
outputs/2025-07-07/16-18-51/jax_cache_dir/: jit_convert_element_type-8009e4b6ffeb90a8c49cf34d563df49977e45c2f3e0d62df1ced57407d72e13b-cache  jit_convert_element_type-b8d6d8582ee14b7c0a1a0f1039d85f25d49a7563065f25617df2cd77a03f3ec6-cache
outputs/2025-07-07/16-18-51/wandb/: latest-run
outputs/2025-07-07/16-20-15/.hydra/: config.yaml  hydra.yaml
outputs/2025-07-07/16-20-15/jax_cache_dir/: jit_convert_element_type-8009e4b6ffeb90a8c49cf34d563df49977e45c2f3e0d62df1ced57407d72e13b-cache  (+1 more)
outputs/2025-07-07/17-38-00/: render_plan_0_data.npz  render_plan_128_data.npz  render_plan_192_data.npz  render_plan_64_data.npz  render_simulation_128_data.npz  render_simulation_192_data.npz  render_simulation_64_data.npz  render_simulation_debug_data.npz
outputs/2025-07-10/13-43-31/: render_simulation_debug_data.npz
src/diffrl/: __init__.py  train.py
src/diffrl/envs/: arm26.py  test_myoelbow.py
(+3194 files in other folders)
